--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
 	  </arguments>
 	</configuration>
       </plugin>
+      	<plugin>
+       <artifactId>maven-war-plugin</artifactId>
+       <version>3.3.2</version>
+	    </plugin>    
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-shade-plugin</artifactId>
