--- a/pom.xml
+++ b/pom.xml
@@ -1,26 +1,42 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.adminfaces</groupId>
-    <artifactId>project</artifactId>
-    <version>0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <name>myapp</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.mycompany.app</groupId>
+  <artifactId>my-app</artifactId>
+  <packaging>war</packaging>	
+  <version>1.0-SNAPSHOT</version>
+  <name>my-app</name>
+  <url>http://maven.apache.org</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>hjojoj
-    </properties>
- 
-    <dependencies>
-         <dependency>
-             <groupId>javax</groupId>
-             <artifactId>javaee-api</artifactId>
-             <version>7.0</version>
-             <scope>provided</scope>
-         </dependency>
-    </dependencies>
-    <build>
+  <properties>
+      <!-- This property will be set by the Maven Dependency plugin -->
+      <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker</artifactId>
+        <version>1.9.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>checker-qual</artifactId>
+        <version>1.9.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.checkerframework</groupId>
+        <artifactId>jdk8</artifactId>
+        <version>1.9.4</version>
+    </dependency>
+  </dependencies>
+<build>
          <resources>
              <resource>
                  <filtering>true</filtering>
